--- a/index.html
+++ b/index.html
@@ -174,38 +174,38 @@
             <h2 class=" text-center  mt text-cyan animated slideInUp">CONTACTO</h2>
             <hr class="col-md-6 col-md-offset-3 bg-pink">
             <br>
-            <p class=" text-center  wow slideInUp">Si te gusto mi trabajo contáctame y trabajemos juntos. <br>
-            <strong class="animated wow slideInUp">¡HASTA PRONTO!</strong></p>
+            <p class=" text-center  wow slideInUp pt-1">Si te gusto mi trabajo contáctame y trabajemos juntos. <br>
+            <strong class="animated wow slideInUp pt-1">¡HASTA PRONTO!</strong></p>
             <ul class="text-center wowslideInUp">
-            <!-- <li> -->
+            <li class="redes">
               <a href="https://github.com/ZulemaAB" target="_blank">
                 <i class="fa fa-github fa-2x text-purple" aria-hidden="true" ></i>
               </a>
-              <p class="text-purple redes">/ZulemaAB</p>
-            <!-- </li> -->
-            <!-- <li> -->
+              <p class="text-purple">/ZulemaAB</p>
+            </li>
+            <li class="redes">
               <a  href="https://www.linkedin.com/in/zulema-asto-berrocal/" target="_blank">
                 <i class="fa fa-linkedin fa-2x text-purple" aria-hidden="true"></i>
               </a>
-                    <p class="text-purple redes">/Zulema Asto Berrocal</p>
-                  <!-- </li> -->
-                  <!-- <li> -->
+                    <p class="text-purple ">/Zulema Asto Berrocal</p>
+                  </li>
+                  <li class="redes">
                     <a href="mailto:zulema.astoberrocal@gmail.com" target="_blank">
                       <i class="fa fa-envelope fa-2x text-purple" aria-hidden="true"></i>
                     </a>
-                    <p class="text-purple redes">zulema.astoberrocal@gmail.com</p>
-                  <!-- </li> -->
-                  <!-- <li> -->
+                    <p class="text-purple">zulema.astoberrocal@gmail.com</p>
+                  </li>
+                  <li class="redes">
                     <i class="fa fa-mobile fa-2x text-purple" aria-hidden="true"></i>
-                    <p class="text-purple redes">997251296</p>
-                  <!-- </li> -->
+                    <p class="text-purple">997251296</p>
+                  </li>
                  </ul>
               </div>
             </div>
-          <footer class="container">
+          <footer class="container copyright">
             <div class="row">
-              <div class="text-center">
-              <p class="center">Copyright &copy; Zulema Asto.</p>
+              <div class="text-center ">
+              <p class="center text-pink pt">Copyright &copy; Zulema Asto.</p>
 
             </div>
             </div>
