--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
   </section>
   <!-- SKILLS -->
   <section id="skills">
-    <div class="container vh100">
+    <div class="container ">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-          <h2 class="text-center  mt text-cyan wow slideInUp ">SKILLS</h2>
+          <h2 class="text-center  mt text-cyan wow slideInUp"><strong>Skills</strong></h2>
           <hr class="col-md-6 col-md-offset-3 bg-pink">
           <br>
           <p class="text-center pt-1">Estas son las herramientas que empleo para poder realizar los trabajos pero descuida que una hoja y lapíz son grandes aliados.</p>
         </div>
-      <div class="col-md-6 col-xs-10">
+      <div class="col-md-12 col-xs-10">
      <!-- SKILL HTML -->
     <div class="skillbar clearfix" data-percent="70%">
       <div class="skillbar-title" style="background: #58387F;">
@@ -116,11 +116,10 @@
             <div class="skillbar-bar" style="background: #E488A1;"></div>
             <div class="skill-bar-percent"><strong>Intermedio</strong></div>
           </div>
-          <div class="col-xs-12 col-md-12">
+          <div class="col-xs-12 col-md-6">
           <img  class="img-responsive wow zoomIn  " src="assets/images/icono-lenguajes.png" alt="lenguajes y frameworks">
         </div>
-
-          <div class="col-xs-12 col-md-12">
+          <div class="col-xs-12 col-md-6">
           <img  class="img-responsive wow zoomIn" src="assets/images/icono-herramientas.png" alt="herramientas">
         </div>
         </div>
@@ -128,15 +127,15 @@
   </section>
   <!-- Proyectos -->
   <section id="proyectos">
-    <div class="container">
+    <div class="container vh100">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 ">
-        <h2 class=" text-center  text-cyan wow slideInUp ">PROYECTOS</h2>
+        <h2 class=" text-center  mt text-cyan wow slideInUp "> <strong>Proyectos</strong></h2>
         <hr class="col-md-6 col-md-offset-3 bg-pink">
       </div>
 
       <div class="">
-      <div class="col-md-4 col-sm-12 col-xs-12 ">
+      <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
         <a href="https://github.com/ZulemaAB/Lab-Car" target="_blanck">
           <img class="img-responsive wow zoomIn" src="assets/images/labcar.PNG" alt="sitio-web">
           <div class="divFondo text-center">
@@ -146,7 +145,7 @@
          </a>
       </div>
       </div>
-      <div class="col-md-4 col-sm-12 col-xs-12 ">
+      <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
           <a href="https://github.com/ZulemaAB/Proyecto-UX" target="_blanck">
           <img class="img-responsive wow zoomIn" src="assets/images/project3.png" alt="app">
             <div class="divFondo text-center">
@@ -155,12 +154,12 @@
             </div>
           </a>
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12 ">
+        <div class="col-md-4 col-sm-12 col-xs-12 mt-1 ">
             <a href="https://github.com/ZulemaAB/banco-millenial" target="_blanck">
               <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
                <div class="divFondo text-center">
                 <h3 class="text-pink">Kimoni</h3>
-                <p>Transformción digital, Busqueda de cautivar a nuevos usuarios:"Milleneals". Elaborado con Figma y Marvel incluido todo el proceso de research</p>
+                <p>Transformción digital, Busqueda de cautivar a nuevos usuarios:"Milleneals". Elaborado con Figma y Marvel incluido todo el proceso de research.</p>
               </div>
             </a>
           </div>
@@ -168,48 +167,47 @@
       </div>
     </section>
     <section id="contacto">
-      <div class="container">
+      <div class="container vh100">
       <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 ">
-            <h2 class=" text-center  mt text-cyan animated slideInUp">CONTACTO</h2>
-            <hr class="col-md-6 col-md-offset-3 bg-pink">
-            <br>
-            <p class=" text-center  wow slideInUp pt-1">Si te gusto mi trabajo contáctame y trabajemos juntos. <br>
-            <strong class="animated wow slideInUp pt-1">¡HASTA PRONTO!</strong></p>
-            <ul class="text-center wowslideInUp">
-            <li class="redes">
-              <a href="https://github.com/ZulemaAB" target="_blank">
-                <i class="fa fa-github fa-2x text-purple" aria-hidden="true" ></i>
-              </a>
-              <p class="text-purple">/ZulemaAB</p>
-            </li>
-            <li class="redes">
-              <a  href="https://www.linkedin.com/in/zulema-asto-berrocal/" target="_blank">
-                <i class="fa fa-linkedin fa-2x text-purple" aria-hidden="true"></i>
-              </a>
-                    <p class="text-purple ">/Zulema Asto Berrocal</p>
-                  </li>
-                  <li class="redes">
-                    <a href="mailto:zulema.astoberrocal@gmail.com" target="_blank">
-                      <i class="fa fa-envelope fa-2x text-purple" aria-hidden="true"></i>
-                    </a>
-                    <p class="text-purple">zulema.astoberrocal@gmail.com</p>
-                  </li>
-                  <li class="redes">
-                    <i class="fa fa-mobile fa-2x text-purple" aria-hidden="true"></i>
-                    <p class="text-purple">997251296</p>
-                  </li>
-                 </ul>
-              </div>
-            </div>
-          <footer class="container copyright">
-            <div class="row">
-              <div class="text-center ">
-              <p class="center text-pink pt">Copyright &copy; Zulema Asto.</p>
-
-            </div>
-            </div>
-          </footer>
+        <h2 class=" text-center mt text-cyan wow slideInUp"> <strong>Contacto</strong></h2>
+        <hr class="col-md-6 col-md-offset-3 bg-pink">
+        <br>
+        <p class=" text-center  wow slideInUp pt-1">Si te gusto mi trabajo contáctame y trabajemos juntos. <br>
+        <strong class="animated wow slideInUp pt-1">¡HASTA PRONTO!</strong></p>
+        <ul class="text-center wowslideInUp">
+          <li class="redes">
+            <a href="https://github.com/ZulemaAB" target="_blank">
+             <i class="fa fa-github fa-2x text-purple" aria-hidden="true" ></i>
+            </a>
+            <p class="text-purple">/ZulemaAB</p>
+          </li>
+          <li class="redes">
+            <a  href="https://www.linkedin.com/in/zulema-asto-berrocal/" target="_blank">
+              <i class="fa fa-linkedin fa-2x text-purple" aria-hidden="true"></i>
+            </a>
+            <p class="text-purple ">/Zulema Asto Berrocal</p>
+          </li>
+          <li class="redes">
+            <a href="mailto:zulema.astoberrocal@gmail.com" target="_blank">
+              <i class="fa fa-envelope fa-2x text-purple" aria-hidden="true"></i>
+            </a>
+            <p class="text-purple">zulema.astoberrocal@gmail.com</p>
+          </li>
+          <li class="redes">
+            <i class="fa fa-mobile fa-2x text-purple" aria-hidden="true"></i>
+            <p class="text-purple">997251296</p>
+          </li>
+        </ul>
+        </div>
+        </div>
+        </div>
+      </section>
+      <footer class="">
+        <div class="text-center col-xs-12 col-md-12 ">
+         <p class="center text-pink">Copyright &copy; Zulema Asto.</p>
+        </div>
+      </footer>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="vendors/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/wow.min.js"></script>
