--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/text.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Zulema</title>
+  <title>Zulema Asto</title>
 </head>
 <body>
   <!-- INICIO -->
@@ -26,7 +26,7 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">Sobre mí</a></li>
-          <li><a href="#skills">Skills</a></li>
+          <li><a href="#skills">Habilidades</a></li>
           <li><a href="#proyectos">Proyectos</a></li>
           <li><a href="#contacto">Contacto</a></li>
         </ul>
@@ -50,7 +50,7 @@
           <img id="zule" src="assets/images/orquidea.jpg" alt="orquidea" class="img-responsive mt-1">
         </div>
         <div class="mt-1  col-md-6 col-xs-12 ">
-          <p class="text-center pt">¡Hola! te doy la bienvenida a mi pagina web, mi nombre es <strong class="text-orange">Zulema Asto Berrocal</strong> y soy <strong class="text-purple"> UX Designer</strong> egresada de <strong class="text-yellow">Laboratoria </strong>.
+          <p class="text-center pt">¡Hola! te doy la bienvenida a mi página web, mi nombre es <strong class="text-orange">Zulema Asto Berrocal</strong> y soy <strong class="text-purple"> UX Designer</strong> egresada de <strong class="text-yellow">Laboratoria </strong>.
             Gracias a todo lo aprendido, brindar soluciones  creativas y eficaces en relación a una buena experiencia de usuario es mi mayor motivación.</p>
           <p class="text-center pt">Sin lugar a dudas el ser Bachiller en Administración de Turismo me brindo ciertas herramientas y espero involucrar ambas pasiones en futuros retos.</p>
           <button id="curriculum" class="btn btn-cv center-block  bounceInRight"><a class=" btn-cv-hover" href="assets/docs/CV-Zule.pdf" target="_blanck">Descarga mi CV</a></button>
@@ -63,7 +63,7 @@
     <div class="container ">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-          <h2 class="text-center  mt text-cyan wow slideInUp"><strong>Skills</strong></h2>
+          <h2 class="text-center  mt text-cyan wow slideInUp"><strong>Habilidades</strong></h2>
           <hr class="col-md-6 col-md-offset-3 bg-pink">
           <br>
           <p class="text-center pt-1">Estas son las herramientas que empleo para poder realizar los trabajos pero descuida que una hoja y lapíz son grandes aliados.</p>
@@ -101,7 +101,7 @@
         </div>
         <!--SKILL GITHUB-->
         <div class="skillbar clearfix " data-percent="45%">
-          <div class="skillbar-title" style="background:#58387F;"><span>GitHub</span></div>
+          <div class="skillbar-title" style="background:#58387F;"><span>Git</span></div>
           <div class="skillbar-bar" style="background:#7E5FA3;"></div>
           <div class="skill-bar-percent"><strong>Básico</strong></div>
         </div>
@@ -134,35 +134,32 @@
         <hr class="col-md-6 col-md-offset-3 bg-pink">
       </div>
 
-      <div class="">
+      <!-- <div class=""> -->
       <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
-        <a href="https://github.com/ZulemaAB/Lab-Car" target="_blanck">
           <img class="img-responsive wow zoomIn" src="assets/images/labcar.PNG" alt="sitio-web">
-          <div class="divFondo text-center">
+          <div class=" text-center">
           <h3 class="text-pink">LabCar</h3>
           <p>Proyecto creado para ayudar a localizar un taxi  mediante una app.</p>
+          <p><a href="https://github.com/ZulemaAB/Lab-Car" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://zulemaab.github.io/Lab-Car/" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
         </div>
-         </a>
       </div>
-      </div>
+      <!-- </div> -->
       <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
-          <a href="https://github.com/ZulemaAB/Proyecto-UX" target="_blanck">
-          <img class="img-responsive wow zoomIn" src="assets/images/project3.png" alt="app">
-            <div class="divFondo text-center">
+          <img class="img-responsive wow zoomIn" src="assets/images/easybus.png" alt="app">
+            <div class=" text-center">
               <h3 class="text-pink">EASY BUS</h3>
-              <p>Prototipo que busca proporcionar una alternativa economica y sencilla de obtener pasajes de buses.</p>
+              <p>Prototipo que busca proporcionar una alternativa económica y sencilla de obtener pasajes de buses.</p>
+              <p><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
             </div>
-          </a>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12 mt-1 ">
-            <a href="https://github.com/ZulemaAB/banco-millenial" target="_blanck">
-              <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
-               <div class="divFondo text-center">
-                <h3 class="text-pink">Kimoni</h3>
-                <p>Transformción digital, Busqueda de cautivar a nuevos usuarios:"Milleneals". Elaborado con Figma y Marvel incluido todo el proceso de research.</p>
-              </div>
-            </a>
+          <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
+          <div class="text-center">
+            <h3 class="text-pink">Kimoni</h3>
+            <p>Transformción digital, Busqueda de cautivar a nuevos usuarios:"Milleneals". Elaborado con Figma y Marvel incluido todo el proceso de research.</p>
+            <p><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/82j8h21/screen/39513413" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
           </div>
+        </div>
         </div>
       </div>
     </section>
