--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="menu">
         <ul>
-          <li><a href="#home">Home</a></li>
+          <!-- <li><a href="#home">Home</a></li> -->
           <li><a href="#about">Sobre mí</a></li>
           <li><a href="#skills">Habilidades</a></li>
           <li><a href="#proyectos">Proyectos</a></li>
@@ -33,7 +33,7 @@
       </div>
     </nav>
     <div class="intro">
-      <h1 class="text-center text text-blue wow zoomIn">ZULEMA ASTO</h1>
+      <h1 class="text-center text1 text-blue wow zoomIn">ZULEMA ASTO</h1>
       <p class="text-center text text-blue wow zoomIn">UX DESIGNER</p>
       <p class="text-center"><a class="btn wow fadeInDown more" href="#about" role="button"><i class="fa fa-chevron-down text-pink"></i></a></p>
     </div>
@@ -46,10 +46,10 @@
           <h2 class="text-center mt text-cyan"><strong>Sobre Mí</strong></h2>
           <hr class="col-md-6 col-md-offset-3 bg-pink">
         </div>
-        <div class="col-md-6 col-xs-12 ">
-          <img id="zule" src="assets/images/orquidea.jpg" alt="orquidea" class="img-responsive mt-1">
+        <div class="col-md-4 col-xs-12 ">
+          <img id="zule" src="assets/images/zulema.jpg" alt="orquidea" class="img-responsive">
         </div>
-        <div class="mt-1  col-md-6 col-xs-12 ">
+        <div class="mt-1  col-md-8 col-xs-12 ">
           <p class="text-center pt">¡Hola! te doy la bienvenida a mi página web, mi nombre es <strong class="text-orange">Zulema Asto Berrocal</strong> y soy <strong class="text-purple"> UX Designer</strong> egresada de <strong class="text-yellow">Laboratoria </strong>.
             Gracias a todo lo aprendido, brindar soluciones  creativas y eficaces en relación a una buena experiencia de usuario es mi mayor motivación.</p>
           <p class="text-center pt">Sin lugar a dudas el ser Bachiller en Administración de Turismo me brindo ciertas herramientas y espero involucrar ambas pasiones en futuros retos.</p>
@@ -66,99 +66,83 @@
           <h2 class="text-center  mt text-cyan wow slideInUp"><strong>Habilidades</strong></h2>
           <hr class="col-md-6 col-md-offset-3 bg-pink">
           <br>
-          <p class="text-center pt-1">Estas son las herramientas que empleo para poder realizar los trabajos pero descuida que una hoja y lapíz son grandes aliados.</p>
+          <p class="text-center pt-1">Estas son las técnicas y herramientas que empleo para poder realizar los trabajos pero descuida que una hoja y lapíz son grandes aliados.</p>
         </div>
-      <div class="col-md-12 col-xs-10">
-     <!-- SKILL HTML -->
-    <div class="skillbar clearfix" data-percent="70%">
-      <div class="skillbar-title" style="background: #58387F;">
-        <span>HTML5</span>
+        <div class="col-md-12 col-sm-12 col-xs-12 bg">
+          <div class="col-md-6 col-xs-12">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>UX Research</strong></h2>
+          </div>
+          <div class="col-md-6 col-xs-12">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>UX Design</strong></h2>
+          </div>
+          <div class="col-md-6 col-xs-12 ">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>User Experience</strong></h2>
+          </div>
+          <div class="col-md-6 col-xs-12 ">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>Design Thinking</strong></h2>
+          </div>
+          <div class="col-md-6 col-xs-12 ">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>Prototyping</strong></h2>
+          </div>
+          <div class="col-md-6 col-xs-12 ">
+            <h2 class="text-center bg-white text4 text-purple wow slideInUp"><strong>Testing</strong></h2>
+          </div>
+          </div>
+        <div class="col-xs-12 col-md-10 col-md-offset-2">
+        <img  class="img-responsive wow zoomIn " src="assets/images/icono-lenguajes.png" alt="lenguajes y frameworks">
       </div>
-          <div class="skillbar-bar" style="background:#7E5FA3;">
-          </div>
-          <div class="skill-bar-percent"><strong>Intermedio</strong></div>
-        </div>
-        <!-- SKILL CSS -->
-        <div class="skillbar clearfix " data-percent="70%">
-          <div class="skillbar-title" style="background: #58387F;">
-            <span>CSS3</span>
-          </div>
-          <div class="skillbar-bar" style="background:#7E5FA3;"></div>
-          <div class="skill-bar-percent"><strong>Intermedio</strong></div>
-        </div>
-        <!--SKILL BOOTSTRAP-->
-        <div class="skillbar clearfix " data-percent="70%">
-          <div class="skillbar-title" style="background:#58387F;">
-            <span>Bootstrap</span></div>
-          <div class="skillbar-bar" style="background:#7E5FA3;"></div>
-          <div class="skill-bar-percent"><strong>Intermedio</strong></div>
-        </div>
-        <!-- SKILL JAVASCRIPT -->
-        <div class="skillbar clearfix " data-percent="45%">
-          <div class="skillbar-title" style="background: #58387F;"><span>JavaScript</span></div>
-            <div class="skillbar-bar" style="background:#7E5FA3;"></div>
-              <div class="skill-bar-percent"><strong>Básico</strong></div>
-        </div>
-        <!--SKILL GITHUB-->
-        <div class="skillbar clearfix " data-percent="45%">
-          <div class="skillbar-title" style="background:#58387F;"><span>Git</span></div>
-          <div class="skillbar-bar" style="background:#7E5FA3;"></div>
-          <div class="skill-bar-percent"><strong>Básico</strong></div>
-        </div>
-        <div class="skillbar clearfix " data-percent="70%">
-           <div class="skillbar-title" style="background: #E65F82;"><span>Figma</span></div>
-           <div class="skillbar-bar" style="background: #E488A1;"></div>
-            <div class="skill-bar-percent"><strong>Intermedio</strong></div>
-          </div>
-          <!--SKILL MARVEL-->
-          <div class="skillbar clearfix " data-percent="70%">
-            <div class="skillbar-title" style="background: #E65F82;"><span>Marvel</span></div>
-            <div class="skillbar-bar" style="background: #E488A1;"></div>
-            <div class="skill-bar-percent"><strong>Intermedio</strong></div>
-          </div>
-          <div class="col-xs-12 col-md-6">
-          <img  class="img-responsive wow zoomIn  " src="assets/images/icono-lenguajes.png" alt="lenguajes y frameworks">
-        </div>
-          <div class="col-xs-12 col-md-6">
-          <img  class="img-responsive wow zoomIn" src="assets/images/icono-herramientas.png" alt="herramientas">
-        </div>
+      <div class="col-xs-10 col-md-12">
+        <p class="text-center text-cyan text3"> Materialize --- Bootstrap --- CSS3  --- HTML5 --- Javascript --- Git </p>
+      </div>
+      <div class="col-xs-12 col-md-12">
+        <p class="text-center text-cyan text3"> Marvel --- Figma </p>
+      </div>
+      <div class="col-xs-12 col-md-10 col-md-offset-2">
+        <img  class="img-responsive wow zoomIn mt-1" src="assets/images/herramientas.png" alt="herramientas">
+      </div>
         </div>
       </div>
   </section>
   <!-- Proyectos -->
   <section id="proyectos">
-    <div class="container vh100">
+    <div class="container">
     <div class="row">
-      <div class="col-md-12 col-sm-12 col-xs-12 ">
+      <div class="col-md-12 col-sm-12 col-xs-12">
         <h2 class=" text-center  mt text-cyan wow slideInUp "> <strong>Proyectos</strong></h2>
         <hr class="col-md-6 col-md-offset-3 bg-pink">
       </div>
-
       <!-- <div class=""> -->
-      <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
+        <div class="col-md-6 col-sm-12 col-xs-12 mt-1">
           <img class="img-responsive wow zoomIn" src="assets/images/labcar.PNG" alt="sitio-web">
-          <div class=" text-center">
-          <h3 class="text-pink">LabCar</h3>
-          <p>Proyecto creado para ayudar a localizar un taxi  mediante una app.</p>
-          <p><a href="https://github.com/ZulemaAB/Lab-Car" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://zulemaab.github.io/Lab-Car/" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
         </div>
-      </div>
-      <!-- </div> -->
-      <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
-          <img class="img-responsive wow zoomIn" src="assets/images/easybus.png" alt="app">
-            <div class=" text-center">
-              <h3 class="text-pink">EASY BUS</h3>
-              <p>Prototipo que busca proporcionar una alternativa económica y sencilla de obtener pasajes de buses.</p>
-              <p><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
-            </div>
-        </div>
-        <div class="col-md-4 col-sm-12 col-xs-12 mt-1 ">
-          <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
-          <div class="text-center">
-            <h3 class="text-pink">Kimoni</h3>
-            <p>Transformción digital, Busqueda de cautivar a nuevos usuarios:"Milleneals". Elaborado con Figma y Marvel incluido todo el proceso de research.</p>
-            <p><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/82j8h21/screen/39513413" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+        <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
+          <div class="text-center description">
+            <h3 class="text-pink">LABCAR</h3>
+            <p class= "text-justify mt-1">LabCar es una aplicación de servicio de taxi ,mediante el cual pueden registrarse nuevos usuarios y conductores. Además de ser una página responsive que hace uso de el framework de Bootstrap.</p>
+            <p class= "mt-1"><a href="https://github.com/ZulemaAB/Lab-Car" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://zulemaab.github.io/Lab-Car/" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
           </div>
+         </div>
+      <!-- <div class=""> -->
+       <div class="col-md-4 col-sm-12 col-xs-12 mt">
+       <div class=" text-center description">
+         <h3 class="text-pink ">EASY BUS</h3>
+         <p class= "text-justify mt-1">Easy Bus es una aplicación que permite a los usuarios disponer de pasajes de buses, promociones y calendario de festividades.Disfruta de las toda las actividades que posee el Perú en feriados y no gastar demás en tus pasajes.</p>
+         <p class="mt-1"><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+       </div>
+       </div>
+       <div class="col-md-8 col-sm-12 col-xs-12 mt">
+          <img class="img-responsive wow zoomIn easybus" src="assets/images/EasyBus.PNG" alt="app">
+       </div>
+      <!-- </div class=""> -->
+      <div class="col-md-7 col-sm-12 col-xs-12 mt">
+          <img class="img-responsive wow zoomIn" src="assets/images/kimoni.PNG" alt="app">
+      </div>
+      <div class="col-md-4 col-sm-12 col-xs-12 mt">
+      <div class="text-center description">
+        <h3 class="text-pink">KIMONI</h3>
+        <p class= "text-justify mt-1">Kimoni es una plataforma alternativa del sistema financiero, enfocado en brindar los beneficios de un banco tradicional a una nueva generación los Millenials, una alternativa fresca y sencilla que permitirá realizar transacciones desde tu celular y disponer de todas tus cuentas de banco, obteniendo Kimonipoints.</p>
+        <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/2giagj2" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+      </div>
         </div>
         </div>
       </div>
