--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
             <a href="https://github.com/ZulemaAB" target="_blank">
              <i class="fa fa-github fa-2x text-purple" aria-hidden="true" ></i>
             </a>
-            <p class="text-purple">/ZulemaAB</p>
+            <p class="text-purple">ZulemaAB</p>
           </li>
           <li class="redes">
             <a  href="https://www.linkedin.com/in/zulema-asto-berrocal/" target="_blank">
               <i class="fa fa-linkedin fa-2x text-purple" aria-hidden="true"></i>
             </a>
-            <p class="text-purple ">/Zulema Asto Berrocal</p>
+            <p class="text-purple ">Zulema Asto Berrocal</p>
           </li>
           <li class="redes">
             <a href="mailto:zulema.astoberrocal@gmail.com" target="_blank">
@@ -177,7 +177,7 @@
           </li>
           <li class="redes">
             <i class="fa fa-mobile fa-2x text-purple" aria-hidden="true"></i>
-            <p class="text-purple">997251296</p>
+            <p class="text-purple">+51997251296</p>
           </li>
         </ul>
         </div>
