--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
        </div>
        </div>
        <div class="col-md-8 col-sm-12 col-xs-12 mt">
-          <img class="img-responsive wow zoomIn easybus" src="assets/images/EasyBus.PNG" alt="app">
+          <img class="img-responsive wow zoomIn easybus" src="assets/images/easybus.png" alt="app">
        </div>
       <!-- </div class=""> -->
       <div class="col-md-7 col-sm-12 col-xs-12 mt">
