--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
        </div>
       <!-- </div class=""> -->
       <div class="col-md-7 col-sm-12 col-xs-12 mt">
-          <img class="img-responsive wow zoomIn" src="assets/images/kimoni.PNG" alt="app">
+          <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12 mt">
       <div class="text-center description">
