--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
         <div class="col-xs-12 col-md-10 col-md-offset-2">
         <img  class="img-responsive wow zoomIn " src="assets/images/icono-lenguajes.png" alt="lenguajes y frameworks">
       </div>
-      <div class="col-xs-10 col-md-12">
-        <p class="text-center text-cyan text3"> Materialize --- Bootstrap --- CSS3  --- HTML5 --- Javascript --- Git </p>
+      <div class="col-xs-12 col-md-12">
+        <p class="text-center text-cyan text3"> --- Materialize -- Bootstrap ---</p>
+        <p class="text-center text-cyan text3"> --- CSS3 -- HTML5 --- </p>
+        <p class="text-center text-cyan text3"> --- Javascript -- Git ---</p>
+
+
       </div>
       <div class="col-xs-12 col-md-12">
         <p class="text-center text-cyan text3"> Marvel --- Figma </p>
@@ -112,28 +116,16 @@
         <hr class="col-md-6 col-md-offset-3 bg-pink">
       </div>
       <!-- <div class=""> -->
-        <div class="col-md-6 col-sm-12 col-xs-12 mt-1">
-          <img class="img-responsive wow zoomIn" src="assets/images/labcar.PNG" alt="sitio-web">
+        <div class="col-md-7 col-sm-12 col-xs-12 mt-1">
+          <img class="img-responsive wow zoomIn easybus" src="assets/images/easybus.png" alt="app">
         </div>
-        <div class="col-md-4 col-sm-12 col-xs-12 mt-1">
-          <div class="text-center description">
-            <h3 class="text-pink">LABCAR</h3>
-            <p class= "text-justify mt-1">LabCar es una aplicación de servicio de taxi ,mediante el cual pueden registrarse nuevos usuarios y conductores. Además de ser una página responsive que hace uso de el framework de Bootstrap.</p>
-            <p class= "mt-1"><a href="https://github.com/ZulemaAB/Lab-Car" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href=" https://zulemaab.github.io/Lab-Car/" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+        <div class="col-md-4 col-sm-12 col-xs-12 mt">
+          <div class=" text-center description">
+            <h3 class="text-pink">EASY BUS</h3>
+            <p class= "text-justify mt-1">Easy Bus es una aplicación que permite a los usuarios disponer de pasajes de buses, promociones y calendario de festividades.Disfruta de las toda las actividades que posee el Perú en feriados y no gastar demás en tus pasajes.</p>
+            <p class="mt-1"><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
           </div>
          </div>
-      <!-- <div class=""> -->
-       <div class="col-md-4 col-sm-12 col-xs-12 mt">
-       <div class=" text-center description">
-         <h3 class="text-pink ">EASY BUS</h3>
-         <p class= "text-justify mt-1">Easy Bus es una aplicación que permite a los usuarios disponer de pasajes de buses, promociones y calendario de festividades.Disfruta de las toda las actividades que posee el Perú en feriados y no gastar demás en tus pasajes.</p>
-         <p class="mt-1"><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
-       </div>
-       </div>
-       <div class="col-md-8 col-sm-12 col-xs-12 mt">
-          <img class="img-responsive wow zoomIn easybus" src="assets/images/easybus.png" alt="app">
-       </div>
-      <!-- </div class=""> -->
       <div class="col-md-7 col-sm-12 col-xs-12 mt">
           <img class="img-responsive wow zoomIn" src="assets/images/kimoni.png" alt="app">
       </div>
@@ -144,6 +136,16 @@
         <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/2giagj2" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
       </div>
         </div>
+        <div class="col-md-7 col-sm-12 col-xs-12 mt">
+            <img class="img-responsive wow zoomIn" src="assets/images/Mi Gamarra.PNG" alt="app">
+        </div>
+        <div class="col-md-4 col-sm-12 col-xs-12 mt">
+        <div class="text-center description">
+          <h3 class="text-pink">MI GAMARRA</h3>
+          <p class= "text-justify mt-1">Mi Gamarra app proporciona la mayor información de tiendas y galerías debidamente constituidas ubicadas en el Gran Emporio Comercial de Gamarra, garantizando a los usuarios seguridad y calidad en los productos.</p>
+          <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/2giagj2" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+        </div>
+          </div>
         </div>
       </div>
     </section>
