--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="text-center description">
           <h3 class="text-pink">MI GAMARRA</h3>
           <p class= "text-justify mt-1">Mi Gamarra app proporciona la mayor información de tiendas y galerías debidamente constituidas ubicadas en el Gran Emporio Comercial de Gamarra, garantizando a los usuarios seguridad y calidad en los productos.</p>
-          <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/2giagj2" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+          <p class= "mt-1"><a href="https://github.com/ZulemaAB/Mi-Gamarra" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/c80id09" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
         </div>
           </div>
         </div>
