--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 
       </div>
       <div class="col-xs-12 col-md-12">
-        <p class="text-center text-cyan text3"> Marvel --- Figma </p>
+        <p class="text-center text-cyan text3"> Marvel -- Figma -- Invision </p>
       </div>
       <div class="col-xs-12 col-md-10 col-md-offset-2">
-        <img  class="img-responsive wow zoomIn mt-1" src="assets/images/herramientas.png" alt="herramientas">
+        <img  class="img-responsive wow zoomIn mt-1" src="assets/images/herramientas-.png" alt="herramientas">
       </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
           </li>
           <li class="redes">
             <i class="fa fa-mobile fa-2x text-purple" aria-hidden="true"></i>
-            <p class="text-purple">+51997251296</p>
+            <p class="text-purple">+51930310889</p>
           </li>
         </ul>
         </div>
