--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class=" text-center description">
             <h3 class="text-pink">EASY BUS</h3>
             <p class= "text-justify mt-1">Easy Bus es una aplicación que permite a los usuarios disponer de pasajes de buses, promociones y calendario de festividades.Disfruta de las toda las actividades que posee el Perú en feriados y no gastar demás en tus pasajes.</p>
-            <p class="mt-1"><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/bj3b0ij/screen/38633714" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+            <p class="mt-1"><a href="https://github.com/ZulemaAB/Easy-Bus" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/i8cdda9" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
           </div>
          </div>
       <div class="col-md-7 col-sm-12 col-xs-12 mt">
@@ -133,7 +133,7 @@
       <div class="text-center description">
         <h3 class="text-pink">KIMONI</h3>
         <p class= "text-justify mt-1">Kimoni es una plataforma alternativa del sistema financiero, enfocado en brindar los beneficios de un banco tradicional a una nueva generación los Millenials, una alternativa fresca y sencilla que permitirá realizar transacciones desde tu celular y disponer de todas tus cuentas de banco, obteniendo Kimonipoints.</p>
-        <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/4hfgi0h" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
+        <p class= "mt-1"><a href="https://github.com/ZulemaAB/KIMONI" target="_blank" class="btn btn-default" role="button">PROYECTO</a> <a href="https://marvelapp.com/i89g684" target="_blank" class="btn btn-primary proyect" role="button">VER DEMO</a></p>
       </div>
         </div>
         <div class="col-md-7 col-sm-12 col-xs-12 mt">
